--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
   <body class="scroll-smooth">
     <section id="nav" class="pb-16">
       <!-- navbar -->
-      <nav class="bg-white fixed w-screen z-10">
+      <nav class="bg-white fixed w-screen z-50">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -136,38 +136,38 @@
           <a href="portfolio/urban.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="../assets/urban/main.jpg"
+              src="../assets/urban/wizualizacja rynku od strony ratusza.jpg"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/industrial.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="../assets/industrial/main.jpg"
+              src="../assets/industrial/wizualizacja hali przemysłowej.jpg"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/pool.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="../assets/pool/pool.jpg"
+              src="../assets/pool/wizualizacja basenu od frontu.jpg"
           /></a>
         </div>
         <div class="col-span-2">
           <a href="portfolio/stable.html"
             ><img
               class="grayscale hover:grayscale-0"
-              src="../assets/stable/1.png"
+              src="../assets/stable/wizualizacja stajni.jpg"
           /></a>
         </div>
-        <div></div>
+        <!-- <div></div>
         <div class="col-span-2">
           <a href="portfolio/kindergarten.html"
             ><img
               class="grayscale hover:grayscale-0"
               src="../assets/kindergarten/main.jpg"
           /></a>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -416,6 +416,6 @@
     </div>
     <!-- contact -->
 
-    <script src="../script.js"></script>
+    <script src="..//script.js"></script>
   </body>
 </html>
