--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
     <link href="/dist/tailwind.css" rel="stylesheet" />
     <link href="/styles.css" rel="stylesheet" />
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </head>
   <body>
     <section id="nav" class="pb-16">
       <!-- navbar -->
-      <nav class="bg-white fixed w-screen z-10">
+      <nav class="bg-white fixed w-screen z-50">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -139,14 +139,95 @@
               design process and the final form of the building.
             </p>
           </div>
-          <img src="../assets/pool/aksonometria.jpg" />
-          <h2 class="uppercase text-lg text-left w-full">Site analysis</h2>
-          <div class="flex gap-1"></div>
-          <img src="../assets/pool/pool.jpg" />
+          <div class="py-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Land development plan
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/pool/PZT.jpg"
+            />
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Axonometric
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/pool/aksonometria.jpg"
+            />
+          </div>
+          <div class="py-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            >
+              Floor plans
+            </h2>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Level -1
+              </h3>
+              <img class="pt-1" src="../../assets/pool/rzut poziom -1.jpg" />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Level 0
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../../assets/pool/rzut poziom 0.jpg"
+              />
+            </div>
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Detail floor
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/kraszewskiego/detail.jpg"
+            />
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Visualizations
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/pool/wizualizacja basenu od frontu.jpg"
+            />
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/pool/wizualizacja obiektu od tyłu.jpg"
+            />
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/pool/wizualizacja wejścia do obiektu.jpg"
+            />
+          </div>
         </div>
       </div>
     </section>
-    
-    <script src="script.js"></script>
+
+    <script src="/script.js"></script>
   </body>
 </html>
