--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
     <link href="/dist/tailwind.css" rel="stylesheet" />
     <link href="/styles.css" rel="stylesheet" />
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </head>
   <body>
     <section id="nav" class="pb-16">
       <!-- navbar -->
-      <nav class="bg-white fixed w-screen z-10">
+      <nav class="bg-white fixed w-screen z-50">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -147,6 +147,6 @@
       </div>
     </section>
     
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
