--- a/portfolio/industrial.html
+++ b/portfolio/industrial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,7 +12,7 @@
   <body>
     <section id="nav" class="pb-16">
       <!-- navbar -->
-      <nav class="bg-white fixed w-screen z-10">
+      <nav class="bg-white fixed w-screen z-50">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -298,7 +298,7 @@
         <span class="w-full" id="footer"></span>
       </footer>
 
-      <script src="script.js"></script>
+      <script src="/script.js"></script>
     </div>
   </body>
 </html>
