--- a/portfolio/pool.html
+++ b/portfolio/pool.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,7 +12,7 @@
   <body>
     <section id="nav" class="pb-16">
       <!-- navbar -->
-      <nav class="bg-white fixed w-screen z-10">
+      <nav class="bg-white fixed w-screen z-50">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -65,18 +65,18 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                    href="#portfolio"
+                    href="../index.html#portfolio"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Portfolio</a
                   >
                   <a
-                    href="#about"
+                    href="../index.html#about"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     aria-current="page"
                     >O mnie</a
                   >
                   <a
-                    href="#contact"
+                    href="../index.html#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Kontakt</a
                   >
@@ -91,7 +91,7 @@
                 pl
               </a>
               <a
-                href="./en/index.html"
+                href="/en/portfolio/pool.html"
                 class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase"
               >
                 en
@@ -104,19 +104,19 @@
         <div class="sm:hidden hidden" id="mobile-menu">
           <div class="space-y-1 px-2 pb-3 pt-2">
             <a
-              href="#portfolio"
+              href="../index.html#portfolio"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
               >Portfolio</a
             >
             <a
-              href="#about"
+              href="../index.html#about"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
               >O mnie</a
             >
             <a
-              href="#contact"
+              href="../index.html#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
               >Kontakt</a
@@ -155,22 +155,33 @@
           </div>
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
             >
-              Analizy
+              Projekt zagospodarowania terenu
             </h2>
-            <div class="flex">
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../assets/pool/PZT.jpg"
+            />
           </div>
-
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Aksonometria
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../assets/pool/aksonometria.jpg"
+            />
+          </div>
           <div class="py-4">
             <h2
               class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
-              Projekt zagospodarowania terenu
+              Rzuty
             </h2>
             <div>
               <h3
@@ -178,7 +189,7 @@
               >
                 Poziom -1
               </h3>
-              <img class="pt-1" src="../assets/kraszewskiego/-1-1.jpg" />
+              <img class="pt-1" src="../assets/pool/rzut poziom -1.jpg" />
             </div>
             <div>
               <h3
@@ -189,31 +200,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="../assets/kraszewskiego/0-1.jpg"
-              />
-            </div>
-            <div>
-              <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
-              >
-                Poziom +1 (powtarzalna kondygnacja)
-              </h3>
-              <img
-                loading="lazy"
-                class="pt-1"
-                src="../assets/kraszewskiego/+1-1.jpg"
-              />
-            </div>
-            <div>
-              <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
-              >
-                Poziom +4
-              </h3>
-              <img
-                loading="lazy"
-                class="pt-1"
-                src="../assets/kraszewskiego/4-1.jpg"
+                src="../assets/pool/rzut poziom 0.jpg"
               />
             </div>
           </div>
@@ -238,34 +225,17 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/kraszewskiego.png"
+              src="../assets/pool/wizualizacja basenu od frontu.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/bird.jpg"
+              src="../assets/pool/wizualizacja obiektu od tyłu.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/inside.jpg"
-            />
-          </div>
-          <div class="pb-4">
-            <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
-            >
-              Model
-            </h2>
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/model1.jpg"
-            />
-            <img
-              loading="lazy"
-              class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/model2.jpg"
+              src="../assets/pool/wizualizacja wejścia do obiektu.jpg"
             />
           </div>
         </div>
@@ -287,7 +257,7 @@
         <span class="w-full" id="footer"></span>
       </footer>
 
-      <script src="script.js"></script>
+      <script src="/script.js"></script>
     </div>
   </body>
 </html>
