poprawione obrazki, sciezki

--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href="/dist/tailwind.css" rel="stylesheet" />
-    <link href="/styles.css" rel="stylesheet" />
-    <script src="/script.js"></script>
+    <link href=../../dist/tailwind.css" rel="stylesheet" />
+    <link href=../../styles.css" rel="stylesheet" />
   </head>
   <body>
     <section id="nav" class="pb-16">
@@ -114,7 +113,7 @@
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
         <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
-          SWIMMING POOL BY CYBINA RIVER
+          Swimming pool by Cybina river
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
           <div>
