--- a/en/portfolio/stable.html
+++ b/en/portfolio/stable.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href="/dist/tailwind.css" rel="stylesheet" />
-    <link href="/styles.css" rel="stylesheet" />
+    <link href=../../dist/tailwind.css" rel="stylesheet" />
+    <link href=../../styles.css" rel="stylesheet" />
   </head>
   <body>
     <section id="nav" class="pb-16">
@@ -105,7 +105,7 @@
   <section class="pt-10 px-3">
     <div class="w-full flex items-center flex-col">
       <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
-        SWIMMING POOL BY CYBINA RIVER
+        Horse stable in Chwarszczany
       </h1>
       <div class="flex items-center flex-col w-full lg:w-3/4">
         <div>
@@ -123,6 +123,7 @@
             elements for breeding horses and running
             a riding school.
           </p>
+          
           <p>
             The result of this work, apart from the restored
             stable, is primarily the design of the house single-
@@ -150,10 +151,6 @@
 
          
         </div>
-        <img src="../assets/pool/aksonometria.jpg" />
-        <h2 class="uppercase text-lg text-left w-full">Site analysis</h2>
-        <div class="flex gap-1"></div>
-        <img src="../assets/pool/pool.jpg" />
       </div>
     </div>
   </section>
