--- a/en/portfolio/kindergarten.html
+++ b/en/portfolio/kindergarten.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href="/dist/tailwind.css" rel="stylesheet" />
-    <link href="/styles.css" rel="stylesheet" />
-    <script src="/script.js"></script>
+    <link href=../../dist/tailwind.css" rel="stylesheet" />
+    <link href=../../styles.css" rel="stylesheet" />
   </head>
   <body>
     <section id="nav" class="pb-16">
