--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href=../../dist/tailwind.css" rel="stylesheet" />
-    <link href=../../styles.css" rel="stylesheet" />
+    <link href=../../dist/tailwind.css" rel="stylesheet" /> <link
+    href=../../styles.css" rel="stylesheet" />
   </head>
   <body>
     <section id="nav" class="pb-16">
@@ -148,10 +148,10 @@
               place in the user.
             </p>
             <p>
-              The project is an attempt to respond to the needs of the
-              recipient not only at the moment, but also in the future. By
-              ensuring the appropriate functionality of the building for users
-              in different age groups.
+              The project is an attempt to respond to the needs of the recipient
+              not only at the moment, but also in the future. By ensuring the
+              appropriate functionality of the building for users in different
+              age groups.
             </p>
           </div>
           <div class="py-4">
@@ -160,9 +160,7 @@
             >
               Axonometric
             </h2>
-            <img
-              src="../../assets/kraszewskiego/axonometry_en.jpg"
-            />
+            <img src="../../assets/kraszewskiego/axonometry_en.jpg" />
           </div>
 
           <div class="py-4">
@@ -177,10 +175,7 @@
               >
                 Level -1
               </h3>
-              <img
-                class="pt-1"
-                src="../../assets/kraszewskiego/-1-1.jpg"
-              />
+              <img class="pt-1" src="../../assets/kraszewskiego/-1-1.jpg" />
             </div>
             <div>
               <h3
@@ -284,10 +279,12 @@
           </div>
         </div>
       </section>
-  
+
       <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
         <span class="w-full" id="footer"></span>
       </footer>
     </div>
+    
+    <script src="../../script.js"></script>
   </body>
 </html>
