--- a/portfolio/industrial.html
+++ b/portfolio/industrial.html
@@ -219,7 +219,7 @@
       <span class="w-full" id="footer"></span>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </div>
 </body>
 
