--- a/en/index.html
+++ b/en/index.html
@@ -416,6 +416,6 @@
     </div>
     <!-- contact -->
 
-    <script src="..//script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
