--- a/portfolio/kraszewskiego.html
+++ b/portfolio/kraszewskiego.html
@@ -298,7 +298,7 @@
         <span class="w-full" id="footer"></span>
       </footer>
 
-      <script src="/script.js"></script>
+      <script src="../script.js"></script>
     </div>
   </body>
 </html>
