--- a/portfolio/urban.html
+++ b/portfolio/urban.html
@@ -218,7 +218,7 @@
       <span class="w-full" id="footer"></span>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </div>
 </body>
 
