--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -105,7 +105,7 @@
   <section class="pt-10 px-3">
     <div class="w-full flex items-center flex-col">
       <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
-        SWIMMING POOL BY CYBINA RIVER
+        Project of an industrial hall
       </h1>
       <div class="flex items-center flex-col w-full lg:w-3/4">
         <div>
