--- a/portfolio/urban.html
+++ b/portfolio/urban.html
@@ -117,7 +117,7 @@
   <section class="pt-10 px-3">
     <div class="w-full flex items-center flex-col">
       <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-30">
-        Projekt przebudowy rynku w Pleszewie
+        Przebudowa rynku w Pleszewie
       </h1>
       <div class="flex items-center flex-col w-full lg:w-3/4">
         <div>
