--- a/portfolio/industrial.html
+++ b/portfolio/industrial.html
@@ -65,54 +65,66 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                    href="#portfolio"
+                    href="../index.html#portfolio"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Portfolio</a
                   >
                   <a
-                    href="#about"
+                    href="../index.html#about"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     aria-current="page"
                     >O mnie</a
                   >
                   <a
-                    href="#contact"
+                    href="../index.html#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Kontakt</a
                   >
                 </div>
               </div>
             </div>
-          </div>
-          <div>
-            <a href=""
-              class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline mr-4 uppercase">
-              pl
-            </a>
-            <a href="./en/index.html"
-              class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase">
-              en
-            </a>
+            <div>
+              <a
+                href=""
+                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline mr-4 uppercase"
+              >
+                pl
+              </a>
+              <a
+                href="/en/portfolio/industrial.html"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase"
+              >
+                en
+              </a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Mobile menu, show/hide based on menu state. -->
-      <div class="sm:hidden hidden" id="mobile-menu">
-        <div class="space-y-1 px-2 pb-3 pt-2">
-          <a href="#portfolio"
-            class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-            onclick="toggleMenu()">Portfolio</a>
-          <a href="#about"
-            class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-            onclick="toggleMenu()">O mnie</a>
-          <a href="#contact"
-            class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-            onclick="toggleMenu()">Kontakt</a>
+        <!-- Mobile menu, show/hide based on menu state. -->
+        <div class="sm:hidden hidden" id="mobile-menu">
+          <div class="space-y-1 px-2 pb-3 pt-2">
+            <a
+              href="../index.html#portfolio"
+              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              onclick="toggleMenu()"
+              >Portfolio</a
+            >
+            <a
+              href="../index.html#about"
+              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              onclick="toggleMenu()"
+              >O mnie</a
+            >
+            <a
+              href="../index.html#contact"
+              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              onclick="toggleMenu()"
+              >Kontakt</a
+            >
+          </div>
         </div>
-      </div>
-    </nav>
-  </section>
+      </nav>
+    </section>
 
   <section class="pt-10 px-3">
     <div class="w-full flex items-center flex-col">
