--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href=../../dist/tailwind.css" rel="stylesheet" /> <link
+    <link href=../../dist/tailwind.css" rel="stylesheet" />
+    <link
     href=../../styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -284,7 +285,7 @@
         <span class="w-full" id="footer"></span>
       </footer>
     </div>
-    
+
     <script src="../../script.js"></script>
   </body>
 </html>
