zmiana obrazków wp

--- a/en/index.html
+++ b/en/index.html
@@ -264,8 +264,7 @@
                   Final result: Engineering studies completed with a maximum
                   score of 5 Final Year Dissertation titled: Multi-family
                   residential building with services on the ground floor at
-                  Kraszewskiego Street, nominated for the competition for the
-                  best thesis project.
+                  Kraszewskiego Street
                 </dd>
               </div>
               <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
@@ -403,8 +402,8 @@
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
           <div class="text-center md:text-left">
-            <div class="mb-2">Email: email@email.com</div>
-            <div class="mb-2">Linkedin: email@email.com</div>
+            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
+            <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
             <div class="mb-2">Poznań</div>
           </div>
         </div>
