--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -274,8 +274,8 @@
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
           <div class="text-center md:text-left">
-            <div class="mb-2">Email: email@email.com</div>
-            <div class="mb-2">Linkedin: email@email.com</div>
+            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
+            <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
             <div class="mb-2">Poznań</div>
           </div>
         </div>
