--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href=../../dist/tailwind.css" rel="stylesheet" />
-    <link
-    href=../../styles.css" rel="stylesheet" />
+    <link href="../../dist/tailwind.css" rel="stylesheet" /> <link
+    href="../../styles.css" rel="stylesheet" />
   </head>
   <body>
     <section id="nav" class="pb-16">
@@ -275,7 +274,9 @@
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
           <div class="text-center md:text-left">
             <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-            <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
+            <div class="mb-2">
+              Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
+            </div>
             <div class="mb-2">Poznań</div>
           </div>
         </div>
