Stopka i część po angielsku

--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -133,14 +133,89 @@
             communication and collaboration among employees.
           </p>
         </div>
-        <img src="../assets/pool/aksonometria.jpg" />
-        <h2 class="uppercase text-lg text-left w-full">Site analysis</h2>
-        <div class="flex gap-1"></div>
-        <img src="../assets/pool/pool.jpg" />
+
+        <div class="pb-4">
+          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
+            Land development plan
+            wycentrować ryzunek z innymi
+          </h2>
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/PZT.jpg" />
+        </div>
+        <div class="py-4">
+          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
+            Floor plan
+          </h2>
+          dodać zestawienie powierzchni przyklejone do końca rzutów
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Level 0
+            </h3>
+            <img loading="lazy" class="pt-1" src="../../assets/industrial/rzut poziom 0.jpg" />
+          </div>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Level +1
+            </h3>
+            <img loading="lazy" class="pt-1" src="../../assets/industrial/rzut poziom +1.jpg" />
+          </div>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Level +2
+            </h3>
+            <img loading="lazy" class="pt-1" src="../../assets/industrial/Rzut dachu.jpg" />
+          </div>
+        </div>
+        <div class="pb-4">
+          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
+            Sections
+          </h2>
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/przekrój a-a.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/przekrój b-b.jpg" />
+        </div>
+        <div class="pb-4">
+          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
+            <Details></Details>
+          </h2>
+          <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+            Łączenie dachu ze ścianą/ mocowanie płyty warstwowej do słupa/ montaż drzwi w płycie warstwowej
+          </h3>
+          <img loading="lazy" class="pt-1 w-full text-center"
+            src="../../assets/industrial/Detal łączenie dachu ze ścianą, mocowanie płyty warstwowej do słupa, montaż drzwi w płycie warstwowej.jpg" />
+  
+  
+        </div>
+      </div>
+      <div class="pb-4">
+        <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
+          Visualisations
+        </h2>
+        <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/wizualizacja hali przemysłowej.jpg" />
+        <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg" />
+        <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/projekt wnętrza stołówki.jpg" />
+      </div>
+    </div>
+  </section>
+</div>
+</section>
+<div class="container border-t border-black md:mt-8 m-auto">
+  <section id="contact" class="container m-auto py-8 md:py-20">
+    <div class="flex md:justify-evenly flex-col items-center md:flex-row">
+      <h2 class="text-4xl font-semibold mb-5 md:mb-0">Contact</h2>
+      <div class="text-center md:text-left">
+        <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
+        <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
+        <div class="mb-2">Localisation: Poznań</div>
       </div>
     </div>
   </section>
 
+  <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
+    <span class="w-full" id="footer"></span>
+  </footer>
+
+  <script src="../script.js"></script>
+</div>
+</body>
   <script src="../../script.js"></script>
 </body>
 
