--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -277,7 +277,7 @@
             <div class="mb-2">
               Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
             </div>
-            <div class="mb-2">Poznań</div>
+            <div class="mb-2"> Localisation: Poznań</div>
           </div>
         </div>
       </section>
