--- a/en/portfolio/stable.html
+++ b/en/portfolio/stable.html
@@ -151,11 +151,84 @@
 
          
         </div>
+        <div class="py-4">
+          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full">
+            Land development plan
+          </h2>
+          <img src="../../assets/stable/PZT.jpg" />
+        </div>
+
+        <div class="py-4">
+          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
+            Floor plan
+          </h2>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Stable
+            </h3>
+            <img class="pt-1" src="../../assets/stable/rzut stajni.jpg" />
+          </div>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              House
+            </h3>
+            <img loading="lazy" class="pt-1" src="../../assets/stable/rzut domu gospodarzy.jpg" />
+          </div>
+        
+        </div>
+        <div class="pb-4">
+          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
+            Roof structure diagram
+          </h2>
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/stable/schemat  konstrukcji dachu stajni.jpg" />
+        </div>
+
+        <div class="py-4">
+          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
+            Section
+          </h2>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Stable
+            </h3>
+            <img class="pt-1" src="../../assets/stable/przekrój przez stajnię.jpg" />
+          </div>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              House
+            </h3>
+            <img loading="lazy" class="pt-1" src="../../assets/stable/przekrój przez dom.jpg" />
+          </div>
+        <div class="pb-4">
+          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
+            Visualisations
+          </h2>
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/stable/wizualizacja stajni front.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/stable/wizualizacja stajni.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/stable/render domu od frontu.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/stable/render domu od strony ogrodu.jpg" />
+        </div>
       </div>
     </div>
   </section>
+  <div class="container border-t border-black md:mt-8 m-auto">
+    <section id="contact" class="container m-auto py-8 md:py-20">
+      <div class="flex md:justify-evenly flex-col items-center md:flex-row">
+        <h2 class="text-4xl font-semibold mb-5 md:mb-0">Contact</h2>
+        <div class="text-center md:text-left">
+          <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
+          <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
+          <div class="mb-2">Localisation: Poznań</div>
+        </div>
+      </div>
+    </section>
 
-  <script src="../../script.js"></script>
+    <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
+      <span class="w-full" id="footer"></span>
+    </footer>
+
+    <script src="../script.js"></script>
+  </div>
 </body>
 
 </html>
