--- a/portfolio/pool.html
+++ b/portfolio/pool.html
@@ -248,7 +248,7 @@
           <div class="text-center md:text-left">
             <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
             <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-            <div class="mb-2">Poznań</div>
+            <div class="mb-2">Lokalizacja: Poznań</div>
           </div>
         </div>
       </section>
