--- a/portfolio/stable.html
+++ b/portfolio/stable.html
@@ -158,9 +158,9 @@
         </div>
         <div class="py-4">
           <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full">
-            Aksonometria
+            Projekt zagospodarowania terenu
           </h2>
-          <img src="../assets/kraszewskiego/AKSONOMETRIA.jpg" />
+          <img src="../assets/stable/PZT.jpg" />
         </div>
 
         <div class="py-4">
@@ -169,49 +169,49 @@
           </h2>
           <div>
             <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Poziom -1
+              Stajni
             </h3>
-            <img class="pt-1" src="../assets/kraszewskiego/-1-1.jpg" />
+            <img class="pt-1" src="../assets/stable/rzut stajni.jpg" />
           </div>
           <div>
             <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Poziom 0
+              domu
             </h3>
-            <img loading="lazy" class="pt-1" src="../assets/kraszewskiego/0-1.jpg" />
+            <img loading="lazy" class="pt-1" src="../assets/stable/rzut domu gospodarzy.jpg" />
           </div>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Poziom +1 (powtarzalna kondygnacja)
-            </h3>
-            <img loading="lazy" class="pt-1" src="../assets/kraszewskiego/+1-1.jpg" />
-          </div>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Poziom +4
-            </h3>
-            <img loading="lazy" class="pt-1" src="../assets/kraszewskiego/4-1.jpg" />
-          </div>
+        
         </div>
         <div class="pb-4">
           <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            Rzut detal
+            Schemat konstrukcji dachu stajni
           </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/kraszewskiego/detail.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/schemat  konstrukcji dachu stajni.jpg" />
         </div>
+
+        <div class="py-4">
+          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
+            Przekroje
+          </h2>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Przez stajnię
+            </h3>
+            <img class="pt-1" src="../assets/stable/przekrój przez stajnię.jpg" />
+          </div>
+          <div>
+            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
+              Przez dom
+            </h3>
+            <img loading="lazy" class="pt-1" src="../assets/stable/przekrój przez dom.jpg" />
+          </div>
         <div class="pb-4">
           <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
             Wizualizacje
           </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/kraszewskiego/kraszewskiego.png" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/kraszewskiego/bird.jpg" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/kraszewskiego/inside.jpg" />
-        </div>
-        <div class="pb-4">
-          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            Model
-          </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/kraszewskiego/model1.jpg" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/kraszewskiego/model2.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/wizualizacja stajni front.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/wizualizacja stajni.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/render domu od frontu.jpg stajni.jpg" />
+          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/render domu od strony ogrodu.jpg stajni.jpg" />
         </div>
       </div>
     </div>
@@ -223,7 +223,7 @@
         <div class="text-center md:text-left">
           <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
           <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-          <div class="mb-2">Poznań</div>
+          <div class="mb-2">Lokalizacja: Poznań</div>
         </div>
       </div>
     </section>
