--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -212,24 +212,26 @@
             />
           </div>
         </div>
-      </section>
-      <div class="container border-t border-black md:mt-8 m-auto">
-        <section id="contact" class="container m-auto py-8 md:py-20">
-          <div class="flex md:justify-evenly flex-col items-center md:flex-row">
-            <h2 class="text-4xl font-semibold mb-5 md:mb-0">Contact</h2>
-            <div class="text-center md:text-left">
-              <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-              <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-              <div class="mb-2">Localisation: Poznań</div>
-            </div>
-          </div>
-        </section>
-    
-        <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
-          <span class="w-full" id="footer"></span>
-        </footer>
-    
-        <script src="../script.js"></script>
       </div>
+    </section>
+    <div class="container border-t border-black md:mt-8 m-auto">
+      <section id="contact" class="container m-auto py-8 md:py-20">
+        <div class="flex md:justify-evenly flex-col items-center md:flex-row">
+          <h2 class="text-4xl font-semibold mb-5 md:mb-0">Contact</h2>
+          <div class="text-center md:text-left">
+            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
+            <div class="mb-2">
+              Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
+            </div>
+            <div class="mb-2">Localisation: Poznań</div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
+        <span class="w-full" id="footer"></span>
+      </footer>
+    </div>
+    <script src="../script.js"></script>
   </body>
 </html>
