--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
     <!-- about -->
     <section id="about" class="pt-6 md:pt-20">
-      <div class="md:flex-row flex flex-col-reverse md:items-end container m-auto md:px-20 lg:px-40">
-        <div class="text-center md:text-left md:mr-14">
+      <div class="lg:flex-row flex flex-col-reverse lg:items-end container m-auto lg:px-20 xl:px-36">
+        <div class="text-center lg:text-left lg:mr-14">
           <h1 class="text-4xl font-semibold mb-6 md:mb-12">Zuzanna Kuszyk</h1>
           <p>
             Jestem ambitną studentką architektury w trakcie studiów
@@ -252,7 +252,7 @@
         <div>
           <div class="px-4 sm:px-0">
             <h3 class="text-base font-semibold leading-7 text-gray-900">
-              Education
+              Edukacja
             </h3>
           </div>
           <div class="mt-6 border-t border-gray-900">
@@ -412,7 +412,7 @@
           <div class="text-center md:text-left">
             <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
             <div class="mb-2">
-              Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
+              Linkedin: linkedin.com/in/zuzanna-kuszyk-70b57626b/
             </div>
             <div class="mb-2">Poznań</div>
           </div>
