--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -85,138 +85,204 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Mobile menu, show/hide based on menu state. -->
-      <div class="sm:hidden hidden" id="mobile-menu">
-        <div class="space-y-1 px-2 pb-3 pt-2">
-          <a href="../index.html#portfolio"
-            class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium">Portfolio</a>
-          <a href="../index.html#about"
-            class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-            aria-current="page">About me</a>
-          <a href="../index.html#contact"
-            class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium">Contact</a>
-        </div>
-      </div>
-    </nav>
-  </section>
-
-  <section class="pt-10 px-3">
-    <div class="w-full flex items-center flex-col">
-      <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
-        Project of an industrial hall
-      </h1>
-      <div class="flex items-center flex-col w-full lg:w-3/4">
-        <div>
-          <p class="pt-4">
-            The innovative project of an industrial hall constructed in collaboration with an office building was
-            created with the aim of enhancing work efficiency, employee comfort, and sustainable development. This
-            complex provides optimal conditions for the production of prefabricated houses while creating an inspiring
-            and friendly atmosphere.
-          </p>
-          <p>
-            The central element of the project is an atrium that serves as a relaxation and meeting space for employees.
-            It is adorned with abundant greenery, creating a pleasant and healthy environment. Access to green spaces is
-            available to all employees, providing them with the opportunity to rest outdoors during breaks.
-
-            The project also considers providing an adequate number of surface parking spaces. Employees and guests have
-            easy access to safe parking, ensuring convenience and logistical efficiency.
-
-            Another important aspect of the project is the incorporation of tall green belts designed around the
-            complex. These green areas not only serve an aesthetic purpose but also contribute to improving air quality
-            and creating a healthier work environment.
-          </p>
-          <p>
-            The office building is designed to offer bright and spacious open-plan offices. Large windows allow for
-            ample natural light, enhancing work comfort and improving efficiency. The open space also fosters seamless
-            communication and collaboration among employees.
-          </p>
-        </div>
-
-        <div class="pb-4">
-          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            Land development plan
-            wycentrować ryzunek z innymi
-          </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/PZT.jpg" />
-        </div>
-        <div class="py-4">
-          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
-            Floor plan
-          </h2>
-          dodać zestawienie powierzchni przyklejone do końca rzutów
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Level 0
-            </h3>
-            <img loading="lazy" class="pt-1" src="../../assets/industrial/rzut poziom 0.jpg" />
-          </div>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Level +1
-            </h3>
-            <img loading="lazy" class="pt-1" src="../../assets/industrial/rzut poziom +1.jpg" />
-          </div>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Level +2
-            </h3>
-            <img loading="lazy" class="pt-1" src="../../assets/industrial/Rzut dachu.jpg" />
+        <!-- Mobile menu, show/hide based on menu state. -->
+        <div class="sm:hidden hidden" id="mobile-menu">
+          <div class="space-y-1 px-2 pb-3 pt-2">
+            <a
+              href="../index.html#portfolio"
+              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              >Portfolio</a
+            >
+            <a
+              href="../index.html#about"
+              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              aria-current="page"
+              >About me</a
+            >
+            <a
+              href="../index.html#contact"
+              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              >Contact</a
+            >
           </div>
         </div>
-        <div class="pb-4">
-          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            Sections
-          </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/przekrój a-a.jpg" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/przekrój b-b.jpg" />
+      </nav>
+    </section>
+
+    <section class="pt-10 px-3">
+      <div class="w-full flex items-center flex-col">
+        <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
+          Project of an industrial hall
+        </h1>
+        <div class="flex items-center flex-col w-full lg:w-3/4">
+          <div>
+            <p class="pt-4">
+              The innovative project of an industrial hall constructed in
+              collaboration with an office building was created with the aim of
+              enhancing work efficiency, employee comfort, and sustainable
+              development. This complex provides optimal conditions for the
+              production of prefabricated houses while creating an inspiring and
+              friendly atmosphere.
+            </p>
+            <p>
+              The central element of the project is an atrium that serves as a
+              relaxation and meeting space for employees. It is adorned with
+              abundant greenery, creating a pleasant and healthy environment.
+              Access to green spaces is available to all employees, providing
+              them with the opportunity to rest outdoors during breaks. The
+              project also considers providing an adequate number of surface
+              parking spaces. Employees and guests have easy access to safe
+              parking, ensuring convenience and logistical efficiency. Another
+              important aspect of the project is the incorporation of tall green
+              belts designed around the complex. These green areas not only
+              serve an aesthetic purpose but also contribute to improving air
+              quality and creating a healthier work environment.
+            </p>
+            <p>
+              The office building is designed to offer bright and spacious
+              open-plan offices. Large windows allow for ample natural light,
+              enhancing work comfort and improving efficiency. The open space
+              also fosters seamless communication and collaboration among
+              employees.
+            </p>
+          </div>
+
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Land development plan wycentrować ryzunek z innymi
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/industrial/PZT.jpg"
+            />
+          </div>
+          <div class="py-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            >
+              Floor plan
+            </h2>
+            dodać zestawienie powierzchni przyklejone do końca rzutów
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Level 0
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../../assets/industrial/rzut poziom 0.jpg"
+              />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Level +1
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../../assets/industrial/rzut poziom +1.jpg"
+              />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Level +2
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../../assets/industrial/Rzut dachu.jpg"
+              />
+            </div>
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Sections
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/industrial/przekrój a-a.jpg"
+            />
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/industrial/przekrój b-b.jpg"
+            />
+          </div>
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              <details></details>
+            </h2>
+            <h3
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+            >
+              Łączenie dachu ze ścianą/ mocowanie płyty warstwowej do słupa/
+              montaż drzwi w płycie warstwowej
+            </h3>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../../assets/industrial/Detal łączenie dachu ze ścianą, mocowanie płyty warstwowej do słupa, montaż drzwi w płycie warstwowej.jpg"
+            />
+          </div>
         </div>
         <div class="pb-4">
-          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            <Details></Details>
+          <h2
+            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+          >
+            Visualisations
           </h2>
-          <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-            Łączenie dachu ze ścianą/ mocowanie płyty warstwowej do słupa/ montaż drzwi w płycie warstwowej
-          </h3>
-          <img loading="lazy" class="pt-1 w-full text-center"
-            src="../../assets/industrial/Detal łączenie dachu ze ścianą, mocowanie płyty warstwowej do słupa, montaż drzwi w płycie warstwowej.jpg" />
-  
-  
+          <img
+            loading="lazy"
+            class="pt-1 w-full text-center"
+            src="../../assets/industrial/wizualizacja hali przemysłowej.jpg"
+          />
+          <img
+            loading="lazy"
+            class="pt-1 w-full text-center"
+            src="../../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg"
+          />
+          <img
+            loading="lazy"
+            class="pt-1 w-full text-center"
+            src="../../assets/industrial/projekt wnętrza stołówki.jpg"
+          />
         </div>
       </div>
-      <div class="pb-4">
-        <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-          Visualisations
-        </h2>
-        <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/wizualizacja hali przemysłowej.jpg" />
-        <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/wizualizacja hali przemysłowej od frontu.jpg" />
-        <img loading="lazy" class="pt-1 w-full text-center" src="../../assets/industrial/projekt wnętrza stołówki.jpg" />
-      </div>
+    </section>
+
+    <div class="container border-t border-black md:mt-8 m-auto">
+      <section id="contact" class="container m-auto py-8 md:py-20">
+        <div class="flex md:justify-evenly flex-col items-center md:flex-row">
+          <h2 class="text-4xl font-semibold mb-5 md:mb-0">Contact</h2>
+          <div class="text-center md:text-left">
+            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
+            <div class="mb-2">
+              Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
+            </div>
+            <div class="mb-2">Localisation: Poznań</div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
+        <span class="w-full" id="footer"></span>
+      </footer>
     </div>
-  </section>
-</div>
-</section>
-<div class="container border-t border-black md:mt-8 m-auto">
-  <section id="contact" class="container m-auto py-8 md:py-20">
-    <div class="flex md:justify-evenly flex-col items-center md:flex-row">
-      <h2 class="text-4xl font-semibold mb-5 md:mb-0">Contact</h2>
-      <div class="text-center md:text-left">
-        <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-        <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-        <div class="mb-2">Localisation: Poznań</div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
-    <span class="w-full" id="footer"></span>
-  </footer>
-
-  <script src="../script.js"></script>
-</div>
-</body>
-  <script src="../../script.js"></script>
-</body>
-
+    <script src="../script.js"></script>
+  </body>
 </html>
