--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zuzanna Kuszyk</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet" />
-    <link href="../../dist/tailwind.css" rel="stylesheet" /> <link
-    href="../../styles.css" rel="stylesheet" />
+    <link href="../../dist/tailwind.css" rel="stylesheet" />
+    <link href="../../styles.css" rel="stylesheet" />
   </head>
   <body>
     <section id="nav" class="pb-16">
@@ -277,7 +277,7 @@
             <div class="mb-2">
               Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
             </div>
-            <div class="mb-2"> Localisation: Poznań</div>
+            <div class="mb-2">Localisation: Poznań</div>
           </div>
         </div>
       </section>
