--- a/en/index.html
+++ b/en/index.html
@@ -419,7 +419,7 @@
               <img
                 class="h-5 w-5"
                 src="../assets/icons/email.svg"
-                alt="Linkedin: "
+                alt="Email: "
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
