--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -273,11 +273,30 @@
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Reach me out!</h2>
           <div class="text-center md:text-left">
-            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-            <div class="mb-2">
-              Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../../assets/icons/email.svg"
+                alt="Email: "
+              />
+              <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2">Localisation: Poznań</div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../../assets/icons/linkedin.svg"
+                alt="Linkedin: "
+              />
+              <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
+            </div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../../assets/icons/location.svg"
+                alt="Localisation: "
+              />
+              <span>Poznań</span>
+            </div>
           </div>
         </div>
       </section>
